View per month.

--- a/assets/partials/cars.html
+++ b/assets/partials/cars.html
@@ -1,7 +1,7 @@
 ﻿<div>
     <h2>Cars</h2>
     <table class="table table-sm">
-        <tr>
+        <tr class="bg-light">
             <th>id</th>
             <th>Name</th>
             <th>Car type</th>
