--- a/assets/partials/employees.html
+++ b/assets/partials/employees.html
@@ -1,7 +1,7 @@
 ﻿<div>
     <h2>Employees</h2>
     <table class="table table-sm">
-        <tr>
+        <tr class="bg-light">
             <th>id</th>
             <th>Name</th>
             <th>Is Driver</th>
