--- a/assets/partials/ridesharing.html
+++ b/assets/partials/ridesharing.html
@@ -1,13 +1,24 @@
 ﻿<div>
     <h2>Ride Sharing</h2>
-    <div class="p-2">
+    <div class="pt-2 pb-2">
         <button ng-click="goPlan(null)" class="btn btn-outline-success"><i class="fa fa-plus"></i> Create new travel plan</button>
+    </div>
+    <div class="form-inline mt-2">
+        <select ng-model="month" class="form-control mb-2 mr-sm-2">
+            <option value="" selected disabled>Month</option>
+            <option ng-repeat="x in months" value="{{x.id}}">{{x.title}}</option>
+        </select>
+        <select ng-model="year" class="form-control mb-2 mr-sm-2">
+            <option value="" selected disabled>Year</option>
+            <option ng-repeat="x in years" value="{{x}}">{{x}}</option>
+        </select>
+        <button ng-click="loadMonth(month, year)" type="submit" class="btn btn-outline-primary mb-2 mr-sm-2" title="Filter"><i class="fas fa-eye"></i></button>
+        <button ng-click="load()" type="submit" class="btn btn-outline-danger mb-2 mr-sm-2" title="Filter">Load All</button>
     </div>
     <div class="table-responsive">
         <table class="table table-sm">
-            <tr>
+            <tr class="bg-light">
                 <th></th>
-                <!--<th>id</th>-->
                 <th>Start Location</th>
                 <th>End Location</th>
                 <th>Start Date</th>
@@ -22,7 +33,6 @@
                         <button ng-click="goPlan(x.id)" class="btn btn-outline-primary m-1" title="Edit"><i class="fa fa-edit"></i></button>
                     </div>
                 </th>
-                <!--<td>{{x.id}}</td>-->
                 <td>
                     <span>{{x.startLoacation}}</span>
                 </td>
