--- a/assets/partials/travelplan.html
+++ b/assets/partials/travelplan.html
@@ -18,7 +18,7 @@
             <input ng-model="d.endDate" type="datetime-local" class="form-control">
         </div>
         <div class="pt-1 pb-3">
-            <button class="btn btn-outline-primary" ng-click="getAvailableCars(d)"><i class="fa fa-search"></i> Get Available Cars</button>
+            <button class="btn btn-outline-primary" ng-click="getAvailableCars(d)"><i class="fa fa-car"></i> Get Available Cars</button>
         </div>
         <div>
             <div ng-if="availableCars.length>0" class="form-group">
@@ -36,12 +36,14 @@
                 </div>
             </div>
         </div>
-        <div class="form-group">
-            <label>Employees:</label>
-            <div class="form-check" ng-repeat="x in employees">
-                <label class="form-check-label">
-                    <input ng-model="x.isSelected" type="checkbox" class="form-check-input" ng-checked="x.isSelected" >{{x.name}} <i ng-if="x.isDriver" class="fa fa-car"></i>
-                </label>
+        <div class="card form-group">
+            <div class="card-body">
+                <label>Employees:</label>
+                <div class="form-check" ng-repeat="x in employees">
+                    <label class="form-check-label">
+                        <input ng-model="x.isSelected" type="checkbox" class="form-check-input" ng-checked="x.isSelected">{{x.name}} <i ng-if="x.isDriver" class="fa fa-id-badge"></i>
+                    </label>
+                </div>
             </div>
         </div>
         <div class="text-right">
