--- a/assets/partials/ridesharing.html
+++ b/assets/partials/ridesharing.html
@@ -13,7 +13,7 @@
             <option ng-repeat="x in years" value="{{x}}">{{x}}</option>
         </select>
         <button ng-click="loadMonth(month, year)" type="submit" class="btn btn-outline-primary mb-2 mr-sm-2" title="Filter"><i class="fas fa-eye"></i></button>
-        <button ng-click="load()" type="submit" class="btn btn-outline-danger mb-2 mr-sm-2" title="Filter">Load All</button>
+        <button ng-click="load()" type="submit" class="btn btn-outline-danger mb-2 mr-sm-2" title="Load all">Load All</button>
     </div>
     <div class="table-responsive">
         <table class="table table-sm">
