--- a/assets/partials/travelplan.html
+++ b/assets/partials/travelplan.html
@@ -1,24 +1,36 @@
 ﻿<div>
     <h2>Travel Plan</h2>
     <form id="frm">
-        <div class="form-group">
-            <label>Start Location:</label>
-            <input ng-model="d.startLoacation" class="form-control" >
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <label>Start Location:</label>
+                    <input ng-model="d.startLoacation" class="form-control">
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <label>End Location:</label>
+                    <input ng-model="d.endLocation" class="form-control">
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <label>End Location:</label>
-            <input ng-model="d.endLocation" class="form-control">
-        </div>
-        <div class="form-group">
-            <label>Start Date:</label>
-            <input ng-model="d.startDate" type="datetime-local" class="form-control">
-        </div>
-        <div class="form-group">
-            <label>End Date:</label>
-            <input ng-model="d.endDate" type="datetime-local" class="form-control">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <label>Start Date:</label>
+                    <input ng-model="d.startDate" type="datetime-local" class="form-control">
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <label>End Date:</label>
+                    <input ng-model="d.endDate" type="datetime-local" class="form-control">
+                </div>
+            </div>
         </div>
         <div class="pt-1 pb-3">
-            <button class="btn btn-outline-primary" ng-click="getAvailableCars(d)"><i class="fa fa-car"></i> Get Available Cars</button>
+            <button class="btn btn-outline-primary" ng-click="getAvailableCars(d)"><i class="fa fa-car"></i> Check Available Cars</button>
         </div>
         <div>
             <div ng-if="availableCars.length>0" class="form-group">
